--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,14 @@ body {
 
 
 /* monitoringpage */
+/* carousel */
+.h3-responsive {
+    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-caption p {
+    text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+}
 
 /* card */
 .wrimagecard {
